# India-Market-Timing-Index

./: .env.example  .gitignore  README.md  append_part3.py  india-market-timing-index-spec.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  daily-train.yml  deploy-site.yml  hourly-run.yml
scripts/: deploy_manual.py  push_secrets.py
src/imti/: __init__.py
src/imti/backtest/: __init__.py
src/imti/cli/: __init__.py  main.py
src/imti/config/: __init__.py  holidays.py  settings.py  thresholds.py
src/imti/core/: __init__.py  enums.py  logger.py  paths.py  types.py  validation.py
src/imti/experiments/: __init__.py  feature_selection.py
src/imti/indicators/: __init__.py  base.py  feature_store.py
src/imti/ingestion/: __init__.py  fetch_snapshot.py  source_audit.py
src/imti/llm/: __init__.py  analyzer.py  client.py  schemas.py
src/imti/models/: __init__.py  inference.py  train.py
src/imti/news/: __init__.py
src/imti/outputs/: __init__.py  blog_generator.py  deploy.py  email_digest.py  readme_updater.py
src/imti/pipelines/: __init__.py  daily.py  hourly.py
src/imti/risk/: __init__.py
src/imti/sources/: __init__.py  base.py  http.py  registry.py
src/imti/storage/: __init__.py  csv_store.py  git_commit.py  json_store.py
tests/: test_blog_generator.py  test_enums.py  test_screener.py  test_settings.py  test_types.py  test_validation.py
website/: astro.config.mjs  package.json
website/public/: robots.txt
website/src/layouts/: Layout.astro
website/src/pages/: about.astro  cookie-policy.astro  disclaimer.astro  index.astro  privacy.astro  screener.astro  terms.astro
(+34 files in other folders)
